--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -3,18 +3,18 @@
 <div class="container navbar">
     <div class="row row-nav">
         <div class="col col-nav1">
-            LOGO
+                <a href="/">PORFOLIO</a>
         </div>
         <div class="col col-nav2">
             <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
                 <li>
                     <a href="/about">About</a>
                 </li>
                 <li>
                     <a href="/artists">Artists</a>
+                </li>
+                <li>
+                    <a href="/contact">Contact</a>
                 </li>
             </ul>
         </div>
