--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,8 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Navbar.astro'
+import Navbar from '../components/Navbar.astro';
+import Header from	'../components/Header.astro';
+import Main from '../components/Main.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
 	<Navbar />
+	<Header />
+	<Main />
+	<Footer />
 </Layout>
