--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -8,6 +8,9 @@
 		<title>Astro Basics</title>
 
 		<link rel="stylesheet" href="/css/style.css">
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
 	</head>
 	<body>
 		<slot />
