--- a/frontend/src/sass/style.scss
+++ b/frontend/src/sass/style.scss
@@ -1,60 +1,153 @@
 @use 'variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Buenard:wght@400..700&display=swap');
 
 //body
 * {
     box-sizing: border-box;
 }
 
-//dark/light
-:root {
-    //body
-    --background-color: whitesmoke;
-    --text-color: black;
-}
-
 //body
 body {
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: #102C57;
+    color: white;
 }
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: lightgray;
-    padding: 15px;
-    .row-nav {
+    //navbar
+    .navbar {
         display: flex;
-        width: 100%;
-        justify-content: flex-start;
-        .col-nav1 {
-            width: 25%;
+        justify-content: space-between;
+        align-items: center;
+        background-color: black;
+        padding: 15px;
+        .row-nav {
             display: flex;
+            width: 100%;
             justify-content: flex-start;
-        }
-        .col-nav2 {
-            width: 50%;
-            display: flex;
-            justify-content: center;
-            ul {
+            .col-nav1 {
+                width: 25%;
                 display: flex;
-                list-style: none;
-                padding: 0;
-                margin: 0;
-                gap: 1.5rem;
-                 li{
-                        a{
+                justify-content: flex-start;
+                a {
+                    text-decoration: none;
+                    font-family: "Oswald", sans-serif;
+                    font-size: 2rem;
+                    color: whitesmoke;
+                }
+            }
+            .col-nav2 {
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                ul {
+                    display: flex;
+                    list-style: none;
+                    padding: 0;
+                    margin: 0;
+                    gap: 2rem;
+                     li{
+                            a{
+                                text-decoration: none;
+                                font-family: "Oswald", sans-serif;
+                                font-size: 2rem;
+                                color: whitesmoke;
+                            }
+                        }
+                    }
+            }
+            .col-nav3 {
+                width: 25%;
+                display: flex;
+                justify-content: flex-end;
+                gap: 1rem;
+                button{
+                    font-family: "Oswald", sans-serif;
+                    font-size: 2rem;
+                }
+            }
+        }
+    }
+    
+    //Header
+    .header {
+        .row-h{
+            .col-h{
+                h1{
+                    text-align: center;
+                    font-family: "Oswald", sans-serif;
+                    font-size: 3rem;
+                    .spanH1 {
+                        font-family: "Open Sans", sans-serif;
+                    }
+                }
+            }
+        }
+    }
+
+    //Main
+    .main {
+        .row-m{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            padding: 10px 10px;
+            width: 100%;
+            max-width: 100%;
+            margin: 0 auto;
+            gap: 16px;
+            .col-m {
+                display: flex;
+                flex-direction: column;
+                .card{
+                    .card-img{
+                        width: 100%;
+                        max-width: 300px;
+                        height: 250px;
+                        object-fit: cover;
+                        border-radius: 10px;
+                    }
+                    .card-body {
+                        h2 {
+                            font-family: "Buenard", serif;
+                        }
+                        p {
+                            font-family: "Buenard", serif;
+                            font-size: 1.1rem;
+                        }
+                        a {
+                            font-family: "Buenard", serif;
+                            color: whitesmoke;
                             text-decoration: none;
+                            background-color: #DAC0A3;
+                            color: black;
+                            padding: 10px;
+                            border-radius: 15px;
                         }
                     }
                 }
-        }
-        .col-nav3 {
-            width: 25%;
-            display: flex;
-            justify-content: flex-end;
-            gap: 1rem;
+            }
         }
     }
-}
+
+    //Footer
+    .footer{
+        background-color: black;
+        color: #F8F0E5;
+        margin-top: 105px;
+        .row-f {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            .col-f{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: "Oswald", sans-serif;
+                font-size: 20px;
+                margin: 15px 15px;
+            }
+        }
+    }
