--- a/frontend/src/components/Header.astro
+++ b/frontend/src/components/Header.astro
@@ -6,7 +6,7 @@
 
         </div>
         <div class="col col-h">
-            <h1 class="headerH1"><span class="spanH1">Portfolio</span> - the largest network of artwork</h1>
+            <h1 class="headerH1"><span class="spanH1">Porfolio</span> - the largest network of artwork</h1>
         </div>
         <div class="col col-h">
 
