--- a/frontend/src/components/Main.astro
+++ b/frontend/src/components/Main.astro
@@ -34,7 +34,7 @@
         </div>
         <div class="col col-m">
             <div class="card">
-                <img class="card-img" src="/images/photography.png" alt="fashion">
+                <img class="card-img" src="/images/fashion.png" alt="fashion">
                 <div class="card-body">
                     <h2 class="card-title">Fashion</h2>
                     <p>The art of creating clothing and accessories</p>
