--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -19,8 +19,12 @@
             </ul>
         </div>
         <div class="col col-nav3">
-            <button>LogIn</button>
-            <button>SignUp</button>
+            <button>
+                <a href="/login">LogIn</a>
+            </button>
+            <button>
+                <a href="/signup">Signup</a>
+            </button>
         </div>
     </div>
 </div>
