--- a/frontend/src/sass/style.scss
+++ b/frontend/src/sass/style.scss
@@ -64,6 +64,10 @@ body {
                 button{
                     font-family: "Oswald", sans-serif;
                     font-size: 2rem;
+                    a {
+                        text-decoration: none;
+                        color: black;
+                    }
                 }
             }
         }
