--- a/frontend/src/pages/signup.astro
+++ b/frontend/src/pages/signup.astro
@@ -2,10 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
-import LoginComponent from '../components/LoginComponent.astro';
+import SignupComponent from '../components/SignupComponent.astro';
 ---
 <Layout>
     <Navbar />
-    <LoginComponent />
+    <SignupComponent />
     <Footer />
 </Layout>
